Database container, Composer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,18 @@ services:
     #remove
     volumes:
       - ./app:/app
+    depends_on:
+      - db
     tty: true
+
+  db:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: app_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
