--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "nette/forms": "^3.2"
+        "nette/forms": "^3.2",
+        "vlucas/phpdotenv": "^5.6"
     },
     "autoload": {
         "psr-4": {
